# canrun_rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: nightly.yml  rust.yml  stable.yml  tests.yml
basic/: Cargo.toml
basic/src/: cmp.rs  lib.rs  ops.rs
basic/src/cmp/: gt.rs  gte.rs  lt.rs  lte.rs  max.rs  min.rs
basic/src/ops/: add.rs  div.rs  mul.rs  sub.rs
canrun/: Cargo.toml  README.md
canrun/benches/: collections.rs  core.rs  main.rs
canrun/src/: domains.rs  example.rs  goals.rs  lib.rs  query.rs  reify.rs  state.rs  unify.rs  util.rs  value.rs
canrun/src/cmp/: gt.rs  gte.rs  lt.rs  lte.rs  max.rs  min.rs
canrun/src/collections/: lmap.rs  ltup.rs  lvec.rs  mod.rs
canrun/src/collections/lmap/: compare.rs  get.rs  mod.rs  subset.rs  superset.rs
canrun/src/collections/lvec/: get.rs  member.rs  mod.rs  slice.rs  subset.rs
canrun/src/core/: constraints.rs  domains.rs  fork.rs  goal.rs  lvarlist.rs  mkmvmap.rs  mod.rs  query.rs  ready_state.rs  reify.rs  state.rs  state_iterator.rs  unify.rs  util.rs  value.rs
canrun/src/core/goal/: all.rs  any.rs  both.rs  custom.rs  either.rs  lazy.rs  project.rs  unify.rs
canrun/src/core/goal/project/: assert_1.rs  assert_2.rs  map_1.rs  map_2.rs  project_1.rs  project_2.rs
canrun/src/core/impls/: mod.rs  primitive.rs
canrun/src/core/state/: constraints.rs  iter_resolved.rs  resolved.rs
canrun/src/core/tests/: test_constrain.rs
canrun/src/docs/: mod.rs  quickstart.md  quickstart.rs
canrun/src/goals/: all.rs  any.rs  both.rs  custom.rs  either.rs  fail.rs  lazy.rs  mod.rs  not.rs  project.rs  succeed.rs  unify.rs
canrun/src/goals/cmp/: gt.rs  gte.rs  lt.rs  lte.rs  max.rs  min.rs
canrun/src/goals/ops/: add.rs  div.rs  mod.rs  mul.rs  sub.rs
canrun/src/goals/project/: assert_1.rs  assert_2.rs  map_1.rs  map_2.rs  mod.rs  project_1.rs  project_2.rs  reified.rs
canrun/src/impls/: primitive.rs  tuples.rs
canrun/src/ops/: add.rs  div.rs  mul.rs  sub.rs
canrun/src/state/: constraints.rs  iter_resolved.rs  resolved.rs
canrun/src/tests/: test_constrain.rs  test_fork.rs  test_unify.rs
canrun/src/util/: multikeymultivaluemap.rs
canrun/src/value/: into_val.rs  lvar.rs
canrun2/: Cargo.toml  README.md
canrun2/benches/: collections.rs  core.rs
canrun2/src/: lib.rs  lvar.rs  state.rs  unify.rs  util.rs  value.rs
canrun2/src/collections/: ltup.rs  mod.rs
canrun2/src/collections/lmap/: get.rs  mod.rs  subset.rs  superset.rs
canrun2/src/collections/lvec/: get.rs  member.rs  mod.rs  slice.rs  subset.rs
canrun2/src/core/: constrain.rs  constraints.rs  fork.rs  mod.rs  query.rs  reify.rs  state.rs  state_iterator.rs  unify.rs  value.rs
canrun2/src/docs/: quickstart.md
canrun2/src/goals/: all.rs  any.rs  both.rs  custom.rs  either.rs  fail.rs  lazy.rs  mod.rs  succeed.rs  unify.rs
canrun2/src/goals/cmp/: gt.rs  gte.rs  lt.rs  lte.rs  max.rs  min.rs  mod.rs
canrun2/src/goals/ops/: add.rs  div.rs  mul.rs  sub.rs
canrun2/src/goals/project/: assert_1.rs  assert_2.rs  map_1.rs  map_2.rs  mod.rs  project_1.rs  project_2.rs
codegen/: Cargo.toml
codegen/src/: lib.rs
collections/: Cargo.toml
collections/benches/: goals.rs  main.rs
collections/src/: example.rs  lib.rs  lmap.rs  lvec.rs  macros.rs  member.rs
collections/src/lmap/: compare.rs
collections/src/lvec/: member.rs  subset.rs
core/: Cargo.toml
core/benches/: goals.rs  main.rs
core/src/: domain.rs  domains.rs  fork.rs  goal.rs  lib.rs  query.rs  state.rs  state_iterator.rs  unify.rs  util.rs  value.rs
core/src/domain/: one.rs  two.rs
core/src/domains/: example.rs
core/src/goal/: all.rs  any.rs  both.rs  custom.rs  either.rs  lazy.rs  not.rs  project.rs  unify.rs
core/src/goal/project/: assert_1.rs  assert_2.rs  map_1.rs  map_2.rs  project_1.rs  project_2.rs
core/src/impls/: mod.rs  primitive.rs  tuples.rs  vec.rs
core/src/old/: constraint.rs  goal.rs
core/src/old/goal/extra/: append.rs
core/src/query/: query_impls.rs
core/src/state/: constraints.rs  impls.rs  iter_resolved.rs  resolved.rs  watch.rs
core/src/tests/: domains.rs  test_constrain.rs  test_fork.rs  test_unify.rs  test_watch.rs
core/src/unify/: tuples.rs  vec.rs
core/src/util/: mod.rs  multikeymultivaluemap.rs
core/src/value/: into_val.rs  lvar.rs  reify_in.rs  reify_val.rs
core/tests/: occurs_check.rs
examples/: Cargo.toml
examples/benches/: main.rs
examples/src/: lib.rs  queens.rs  reindeer.rs  zebra.rs
extra/mkmvmap/: Cargo.toml
extra/mkmvmap/src/: lib.rs
goals/: Cargo.toml
goals/src/: both.rs  either.rs  fail.rs  lib.rs  succeed.rs
readme_check/: Cargo.toml
readme_check/src/: lib.rs
src/: can.rs  constraint.rs  core.rs  domain.rs  goal.rs  lib.rs  lvar.rs  query.rs  state.rs  unify.rs  v2.rs  value.rs
src/can/: hoc.rs  lvar.rs  mod.rs  pair.rs  vec.rs
src/cell/: lvar.rs  mod.rs  pair.rs  vec.rs
src/core/: domain.rs  goal.rs  lvar.rs  mod.rs  query.rs  state.rs  val.rs  value.rs
src/core/goal/: all.rs  any.rs  both.rs  custom.rs  either.rs  lazy.rs  not.rs  project.rs  unify.rs
src/core/state/: impls.rs
src/core/tests/: test_fork.rs  test_unify.rs  test_watch.rs  util.rs  utils.rs
src/core/util/: multikeymultivaluemap.rs
src/domain/: one.rs  two.rs
src/goal/: all.rs  any.rs  append.rs  both.rs  constrain.rs  custom.rs  either.rs  equal.rs  lazy.rs  map.rs  member.rs  mod.rs  not.rs  project.rs  unify.rs  with.rs
src/goal/extra/: all.rs  any.rs  append.rs  map.rs  member.rs  mod.rs  relative.rs
src/old/: can.rs  v2.rs
src/old/can/: vec.rs
src/state/: resolved.rs
src/take2/: domain.rs  goals.rs  mod.rs  state.rs  val.rs
src/take2/core/: domain.rs  goal.rs  mod.rs  query.rs  state.rs  tests.rs  val.rs
src/take2/core/tests/: test_fork.rs  test_unify.rs  test_watch.rs  utils.rs
src/take2/goals/: equal.rs
src/util/: mod.rs  multikeymultivaluemap.rs  multikeyvaluemap.rs  test.rs
src/value/: lvar.rs
tests/: occurs_check.rs
