[package]
name = "canrun_basic"
description = "Basic goals constructors for the Canrun crate"
version = "0.1.0"
authors = ["Erik Simmler <tgecho@gmail.com>"]
repository = "https://github.com/tgecho/canrun_rs"
documentation = "https://docs.rs/crate/canrun_basic"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
canrun = {version = "0.1.0", path = "../core"}
