[package]
name = "canrun"
description = "A logic programming library inspired by the *Kanren family of language DSLs."
version = "0.2.0"
authors = ["Erik Simmler <tgecho@gmail.com>"]
repository = "https://github.com/tgecho/canrun_rs"
documentation = "https://docs.rs/crate/canrun"
readme="../README.md"
categories = ["algorithms", "mathematics"]
keywords = ["logic", "dsl", "kanren"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
im-rc = "15.0.0"
rand = "0.8.0"
itertools = "0.10.0"
canrun_codegen = { version = "0.1.0", path = "../codegen"}

[dev-dependencies]
log = "0.4.8"
env_logger = "0.8.1"
criterion = "0.3.3"

[[bench]]
name = "main"
harness = false
