[package]
name = "canrun"
description = "A logic programming library inspired by the *Kanren family of language DSLs."
version = "0.5.0"
authors = ["Erik Simmler <tgecho@gmail.com>"]
repository = "https://github.com/tgecho/canrun_rs"
documentation = "https://docs.rs/crate/canrun"
readme="../README.md"
categories = ["algorithms", "mathematics"]
keywords = ["logic", "dsl", "kanren"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
im-rc = "15.1.0"
itertools = "0.12.0"

[dev-dependencies]
log = "0.4.17"
env_logger = "0.11.2"
criterion = "0.5.1"

[[bench]]
name = "main"
harness = false
