[package]
name = "canrun_codegen"
description = "Procedural macros used by the Canrun crate"
version = "0.1.0"
authors = ["Erik Simmler <tgecho@gmail.com>"]
repository = "https://github.com/tgecho/canrun_rs"
documentation = "https://docs.rs/crate/canrun_codegen"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.33"
quote = "1.0.7"
proc-macro2 = "1.0.18"
