[package]
name = "canrun_collections"
description = "Collection related types and goal constructors for the Canrun crate"
version = "0.1.0"
authors = ["Erik Simmler <tgecho@gmail.com>"]
repository = "https://github.com/tgecho/canrun_rs"
documentation = "https://docs.rs/crate/canrun_collections"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
canrun = {version = "0.1.0", path = "../core"}
itertools = "0.9.0"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "main"
harness = false
