[package]
name = "canrun"
version = "0.1.0"
authors = ["Erik Simmler <tgecho@gmail.com>"]
edition = "2018"

[dependencies]
im-rc = "15.0.0"
rand = "0.7.3"
itertools = "0.9.0"
log = "0.4.8"
canrun_codegen = {path = "../codegen"}

[dev-dependencies]
env_logger = "0.7.1"
criterion = "0.3.2"

[[bench]]
name = "main"
harness = false
