[package]
name = "canrun_examples"
description = "Canrun examples and proofs of concept"
version = "0.1.0"
authors = ["Erik Simmler <tgecho@gmail.com>"]
repository = "https://github.com/tgecho/canrun_rs"
documentation = "https://docs.rs/crate/canrun_collections"
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
canrun = { path = "../canrun"}

[dev-dependencies]
env_logger = "0.10.0"
criterion = "0.4.0"

[[bench]]
name = "main"
harness = false
